--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Bookenizer project
+20.04.2011
+- Calendar support added to solution.
 18.04.2011
 - 1st stage completed. Sites engine, localization, autocomplete etc.
 - under Support folder added sample config files for linux's apache2 server
